<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/et_city_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_hint"
        android:padding="@dimen/mainPadding"/>
    <TextView
        android:id="@+id/show_URL_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/URL_show_line"
        android:layout_marginTop="@dimen/mainPadding"
    />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="@dimen/mainPadding"
            android:id="@+id/show_results_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/URL_request_result"
            />
    </ScrollView>
        <ProgressBar
            android:id="@+id/pb_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </FrameLayout>
    <View
        android:id="@+id/delimiter"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/colorDelimeter"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_items_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>




</LinearLayout>