<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/item_gradient"
    android:padding="16dp"
    android:layout_marginStart="@dimen/constraintLayoutMargin"
    android:layout_marginEnd="@dimen/constraintLayoutMargin"
    android:layout_marginTop="@dimen/constraintLayoutMargin">

    <ImageView
        android:id="@+id/weather_icon_iv"
        android:layout_width="@dimen/listItemWidthHeight"
        android:layout_height="@dimen/listItemWidthHeight"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        app:layout_constraintStart_toEndOf="@id/weather_icon_iv"
        android:id="@+id/list_item_weather_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/listItemWidthHeight"
        android:text="@string/weather_desc"
        android:textSize="@dimen/weatherDescTextSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:layout_marginStart="@dimen/mainPadding"/>
    <TextView
        android:id="@+id/list_item_temperature_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tempTextSize"
        app:layout_constraintEnd_toEndOf="@id/list_item_date_tv"
        app:layout_constraintStart_toStartOf="@id/list_item_date_tv"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/temperature"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/list_item_date_tv"
        android:layout_width="@dimen/mainWeatherIconSize"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainPadding"
        android:layout_marginEnd="@dimen/mainPadding"
        android:textSize="@dimen/dataTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_item_temperature_tv"
        android:text="@string/date"
        android:gravity="center"
        />
</androidx.constraintlayout.widget.ConstraintLayout>